--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,75 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/4DUjsh7.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 16 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/rg8poHP.gif"/><br>
+i realize how this website has grown since its creation and i am very proud of the progress <img src="https://i.imgur.com/3SNUoL5.gif"/><br>
+i'm doing my best to bring frequent updates and useful content to you !!<br>
+please ask me complex questions to write about, it's hard to think about subjects that seem relevant..<br>
+i get many questions that would not really do a good q&a, you know ?<br>
+<br>
+you know that i have a routine page, i have schedules to do certain things and daily tasks, this helps me a lot to organize things, as well as my weekly listings and schedules.<br>
+of course life doesn't always collaborate and we have to make adaptations, but it is great to have a base to know what to do and not waste time.<br>
+so, i've been trying hard to spend less time on the internet lately !<br>
+if i'm forced to do this i always find a way to do everything in a short time, but it is difficult to have discipline when i have free time ; ;<br>
+some of my tasks require the internet, so i defined a period of 3 hours a day as the maaaaximum time on the internet, on those more complicated days ; but i usually spend 2 hours or even 1 hour and i'm very happy about it ♡ !<br>
+it's a very important practice, especially for those who do many "quiet" activities like me, it is necessary to space these times to stretch, drink water, make snacks and take some air outside.<br>
+in fact, i would like to clarify that i don't really wake up 6 am going to sleep 1 am, it would be torture.. <img src="https://i.imgur.com/NtMNFpN.gif"/><br>
+i just get up to watch the sunrise ( when it's possible, i really like doing it ), so i also eat a fruit and plan my day ; if it's very hot i like to take a shower to refresh, then i go back to sleep until 10 am !<br>
+i just really wake up at 6 am if i need to and in that case i always go to bed before midnight.<br>
+<br>
+i was writing lots of letters lately and thinking.. sometimes i get a little annoyed with my handwriting because it's very... childish <img src="https://i.imgur.com/Clflx9p.gif"/><br>
+i don't know how to explain, i don't think it's ugly, it's kinda cute ; but it's a little clumsy, small and "roundy", it's the same handwriting that i see in my old school notebooks !!<br>
+if you have already exchanged letters with me or have already seen my handwriting fonts you will understand.<br>
+( by the way, if you are interested in exchanging letters don't hesitate to contact me in the email because i love doing this ♡ )<br>
+i really like calligraphy so i train a lot, i like to write in different letters to make decorated titles and "aesthetic" texts, but my natural handwriting really is childish and there's nothing i can do about it ; ;<br>
+they say people's handwriting reflects their personality, i know everyone has a unique handwriting that is a "brand" of them and that's very special ♡<br>
+but it is impossible not to envy people who have naturally mature and elegant handwriting ///<br>
+well, i can "simulate" this if i really want to, but it's not the same since it inevitably doesn't suit me very much so i usually just prefer to be myself.<br>
+<br>
+enough of talking, today the post will have a super cute drawing that i painted ♡ !<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/rXW8KJl.png"/></center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i absolutely love paper dolls ♡ !!!<br>
+i know that compared to the last posts full of content this seems a little bit meh but i'm really busy with bigger things right now <img src="https://i.imgur.com/138iVRv.gif"/><br>
+<br>
+today's q&a is something sweet and positive for you ♡<br>
+hmnfg i hope it doesn't seem pretentious or anything like that <img src="https://i.imgur.com/HUaeQ0l.gif"/><br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+have you ever seen people who are so beautiful, kind and have a lovely aura that makes everyone feel comfortable and safe around ? it seems like a rare and precious personality trait, like this person knows nothing bad and lives in a beautiful and different reality.<br>
+in fact, i have learned over time that this is a skill to be acquired with maturity. bad experiences don't influence who you really are and shouldn't make you have a heavy and sad aura. bad experiences happen for you to mature and to be able to avoid them in the future, as well as helping other people in a similar situation ; traumas are not part of you, all bad things you've been through, you've seen or just know that exist, none of that is part of you and none of that represents your reality.<br>
+you should never become ignorant, keep yourself informed of the world situation and mold your opinions is very important to live healthy and safe ! however, it is extremely important to keep yourself pure despite all this. purity will give you a different aura and will make your reality, in fact, beautiful.<br>
+don't let bad thoughts and memories affect you continuously ; boring and ugly things are a part of life and you really should deal with them properly and don't ignore them, but you should not make them a personal problem. on daily basis you should forget everything bad and only think of beautiful and pleasant things that you live, lived and would like to live : daydream, watch the sky, pick flowers, write love letters, wear perfume, put on pajamas all day, wear your favorite dress casually ! life has many opportunities for you to make it beautiful and create good memories for you to keep and share with others.<br>
+surround yourself with beautiful things, embellish ugly things you don't like to look at, cherish people who love you & move away from people who are toxic to you. small details in your life can greatly help shaping your ability to be positive and emanate kindness and beauty ♡<br>
+<br>
+remember : the kinder you are, the more beautiful you become ( and that includes being kind to yourself )<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/US4BOYk.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/4DUjsh7.png"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/68tgLBE.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
