--- a/blog.html
+++ b/blog.html
@@ -363,6 +363,82 @@ font-family: Verdana;
 <div id="coisinhos">
 <br>
 
+<center><img src="https://i.imgur.com/pIedBae.gif"/><img src="https://i.imgur.com/pIedBae.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 25 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/x4rca2I.gif"/><br>
+my lovely store is open and with an extremely cute layout !!!!<br>
+modesty aside, i'm really in love with the layout i made ♡ !<br>
+i'm so very happy to have decided to make a layout of my own. before i was not going to do it and i was going to use a platform, i thought it would make things easier ...<br>
+but i definitely think it's important that my store is as cute as possible and i'd like to do my best for that !!!<br>
+i used a subdomain for the store : https://shybunny.middlepot.com<br>
+it's all in portuguese because at least for now i'm giving priority to sales here in brazil, but i'm accepting some of these too ( i wrote more about it on the site )<br>
+<br>
+so, i made yesterday a very cute new flash game <img src="https://i.imgur.com/doqIwv1.gif"/><br>
+... not about halloween but i also posted one last year, remember ?<br>
+<br><br>
+
+<center><a href="https://middlepot.com/tinykittens" target="_blank"><img src="https://i.imgur.com/hsu8YwY.png"/></a></center>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i hope you like it, cats are the best <img src="https://i.imgur.com/QNshURw.gif"/><br>
+here it is, the melody i used for this little game :<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/jtn4g0.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">play outside .mp3</font></a>　
+</center>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+very playfull and cute, just like kittens !<br>
+and talking about cats, i have here a drawing that i did in ms paint :<br>
+<br><br>
+
+<center><img width="430px" height="auto" src="https://i.imgur.com/ZRN030i.png"/></center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+now this is about halloween !!!<br>
+but of course you still don't know ...<br>
+these are cream and maurice, they are main characters in the game that i am making, that is halloween themed <img src="https://i.imgur.com/w8eNj1M.gif"/><br>
+they are twins and they are very great ♡<br>
+you will know more soon!<br>
+<br>
+today i want the post to be light, so i'll write about a slightly more personal subject, with some tips <img src="https://i.imgur.com/wkxTdyp.gif"/><br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+i once wrote about myself and my personality and i mentioned how i like to organize and improve myself, and how i like rules. as i always support the purity, happiness & comfort of people, why would i support rules being imposed to shape us ?<br>
+i know it can be confusing, but i actually think the rules, if handled correctly, can help us a lot to find out more about ourselves, and not shape ourselves to be something different, but the other way around.<br>
+social and behavioral rules can be very oppressive and force us to act in an uncomfortable way, to make us confused under the obligation to be accepted socially above being ourselves, and happy ; but by analyzing these kinds of rules and constantly questioning them, i could see that they actually made me realize who i really am ! by reading these rules and wondering if they really fit into my lifestyle and personality, i could see clearly what i wanted or not for my life. i could understand the principles and foundations of these rules, and where they "wanted us to go". usually social and behavioral rules have the general objective that you be a nice person and don't bother other people, and that is a good thing ; the problem is that these have very specific peculiarities that don't fit for anyone. all people feel uncomfortable and unhappy if they try to follow all these rules strictly because they don't fit everyone. in short, my solution to achieving a healthy life was to adapt these rules to my way !<br>
+i really like writing rules for myself and even having rules made for me, reading about all those rules and "good manners" that are supposed to make a "good person". i find it very productive and it helps me a lot to find myself individually rewriting these rules so that they still have their main good intention but in a way that is comfortable for me as a person. i can see how personally i could feel happy to follow some good, healthy rules as a way of reminders. i value a lot of rules that involve kindness, education and respect, as i believe that it is fundamental to have healthy relationships and it makes me happy ; it just happens that these rules are very "heavy" and try to change ourselves, but there are usually ways of interpreting and rewriting them that make them good and productive for our lives.<br>
+it is clear that some rules simply don't fit my life at all, and should be discarded. unfortunately, even striving to keep polite and sincere with people who question me about such "weird" attitudes that i choose for my life ( for example refusing to be in social events supposed to be important to my social life, but that doesn't make me happy ) people will still judge me negatively because i didn't obey "the rule". this is something we naturally suffer as a consequence of being truly honest and kind to ourselves, but it is also an important process in the pursuit of purity.<br>
+i really care about evaluating my behavior, in general. when we are busy with our tasks we may forget to take care of ourselves, so i believe it is very important to always stop from time to time and think "how am i feeling ?", "is my body feeling well ?". stop for drinking water, wash your face, eat a fruit, walking, adjusting the lighting... these simple things are primordial to maintain our physical and mental health. like this habit, when i'm interacting with other people i always evaluate my behavior to see if i'm expressing myself properly, if i'm being kind, sincere, if i'm being myself, if the conversation is being comfortable for me and the other person. this may seem maybe a little "obsessive", but if done in a healthy and natural way is very good and greatly improves our quality of life. all these "rules" are about doing my best and not letting myself get carried away by the things of life and forgetting about my health or being nice to people.<br>
+it's primordial not to expect other people's approval and social validation when defining your rules and lifestyle, but rather how you personally, from the heart, feel about it. of course, you will feel happy and satisfied in being a good person and not messing around, but it is completely different from pretending just to receive compliments, to feel included and correct. the most correct and valid you can be is yourself ♡<br>
+<br>
+i know it's a little difficult to understand, but i hope i have explained it clearly !!<br>
+happy halloween for you, be careful not to eat toooooo much candy <img src="https://i.imgur.com/cwyTIFV.gif"/><br>
+<br>
+<center><img src="https://i.imgur.com/sq9YSJH.gif"/></center>
+<br>
+xoxo <img src="https://i.imgur.com/ABmh1tt.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/pIedBae.gif"/><img src="https://i.imgur.com/pIedBae.gif"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/uVjxZcw.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -557,74 +633,6 @@ xoxo <img src="https://i.imgur.com/OYsjUtj.gif"/><br>
 <br>
 
 <center><img src="https://i.imgur.com/tpBWv2N.png"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/4DUjsh7.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>august . 16 . 2018</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiiii fluffies <img src="https://i.imgur.com/rg8poHP.gif"/><br>
-i realize how this website has grown since its creation and i am very proud of the progress <img src="https://i.imgur.com/3SNUoL5.gif"/><br>
-i'm doing my best to bring frequent updates and useful content to you !!<br>
-please ask me complex questions to write about, it's hard to think about subjects that seem relevant..<br>
-i get many questions that would not really do a good q&a, you know ?<br>
-<br>
-you know that i have a routine page, i have schedules to do certain things and daily tasks, this helps me a lot to organize things, as well as my weekly listings and schedules.<br>
-of course life doesn't always collaborate and we have to make adaptations, but it is great to have a base to know what to do and not waste time.<br>
-so, i've been trying hard to spend less time on the internet lately !<br>
-if i'm forced to do this i always find a way to do everything in a short time, but it is difficult to have discipline when i have free time ; ;<br>
-some of my tasks require the internet, so i defined a period of 3 hours a day as the maaaaximum time on the internet, on those more complicated days ; but i usually spend 2 hours or even 1 hour and i'm very happy about it ♡ !<br>
-it's a very important practice, especially for those who do many "quiet" activities like me, it is necessary to space these times to stretch, drink water, make snacks and take some air outside.<br>
-in fact, i would like to clarify that i don't really wake up 6 am going to sleep 1 am, it would be torture.. <img src="https://i.imgur.com/NtMNFpN.gif"/><br>
-i just get up to watch the sunrise ( when it's possible, i really like doing it ), so i also eat a fruit and plan my day ; if it's very hot i like to take a shower to refresh, then i go back to sleep until 10 am !<br>
-i just really wake up at 6 am if i need to and in that case i always go to bed before midnight.<br>
-<br>
-i was writing lots of letters lately and thinking.. sometimes i get a little annoyed with my handwriting because it's very... childish <img src="https://i.imgur.com/Clflx9p.gif"/><br>
-i don't know how to explain, i don't think it's ugly, it's kinda cute ; but it's a little clumsy, small and "roundy", it's the same handwriting that i see in my old school notebooks !!<br>
-if you have already exchanged letters with me or have already seen my handwriting fonts you will understand.<br>
-( by the way, if you are interested in exchanging letters don't hesitate to contact me in the email because i love doing this ♡ )<br>
-i really like calligraphy so i train a lot, i like to write in different letters to make decorated titles and "aesthetic" texts, but my natural handwriting really is childish and there's nothing i can do about it ; ;<br>
-they say people's handwriting reflects their personality, i know everyone has a unique handwriting that is a "brand" of them and that's very special ♡<br>
-but it is impossible not to envy people who have naturally mature and elegant handwriting ///<br>
-well, i can "simulate" this if i really want to, but it's not the same since it inevitably doesn't suit me very much so i usually just prefer to be myself.<br>
-<br>
-enough of talking, today the post will have a super cute drawing that i painted ♡ !<br>
-<br><br>
-
-<center><img width="350px" height="auto" src="https://i.imgur.com/rXW8KJl.png"/></center>
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-i absolutely love paper dolls ♡ !!!<br>
-i know that compared to the last posts full of content this seems a little bit meh but i'm really busy with bigger things right now <img src="https://i.imgur.com/138iVRv.gif"/><br>
-<br>
-today's q&a is something sweet and positive for you ♡<br>
-hmnfg i hope it doesn't seem pretentious or anything like that <img src="https://i.imgur.com/HUaeQ0l.gif"/><br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<br><br>
-have you ever seen people who are so beautiful, kind and have a lovely aura that makes everyone feel comfortable and safe around ? it seems like a rare and precious personality trait, like this person knows nothing bad and lives in a beautiful and different reality.<br>
-in fact, i have learned over time that this is a skill to be acquired with maturity. bad experiences don't influence who you really are and shouldn't make you have a heavy and sad aura. bad experiences happen for you to mature and to be able to avoid them in the future, as well as helping other people in a similar situation ; traumas are not part of you, all bad things you've been through, you've seen or just know that exist, none of that is part of you and none of that represents your reality.<br>
-you should never become ignorant, keep yourself informed of the world situation and mold your opinions is very important to live healthy and safe ! however, it is extremely important to keep yourself pure despite all this. purity will give you a different aura and will make your reality, in fact, beautiful.<br>
-don't let bad thoughts and memories affect you continuously ; boring and ugly things are a part of life and you really should deal with them properly and don't ignore them, but you should not make them a personal problem. on daily basis you should forget everything bad and only think of beautiful and pleasant things that you live, lived and would like to live : daydream, watch the sky, pick flowers, write love letters, wear perfume, put on pajamas all day, wear your favorite dress casually ! life has many opportunities for you to make it beautiful and create good memories for you to keep and share with others.<br>
-surround yourself with beautiful things, embellish ugly things you don't like to look at, cherish people who love you & move away from people who are toxic to you. small details in your life can greatly help shaping your ability to be positive and emanate kindness and beauty ♡<br>
-<br>
-remember : the kinder you are, the more beautiful you become ( and that includes being kind to yourself )<br>
-<br>
-<br>
-xoxo <img src="https://i.imgur.com/US4BOYk.gif"/><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/4DUjsh7.png"/></center>
 
 <br><br><br>
 
