--- a/recommended.html
+++ b/recommended.html
@@ -346,15 +346,50 @@ position: relative;
 <font color="#DB9999">{ sites & blogs i recommend }</font></center>
 <br><br><br>
 
+<div style="line-height:6px;">
+
 <center>
 
+<a href="http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/9jcAUVv.gif"></a>
+　<a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
+　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
 
+　<br><br><a href="http://bitmapdreams.lastsecret.net/" target="_blank"><img src="https://i.imgur.com/NrB9UB9.gif"></a>
+　<a href="http://www.asterism-m.com/" target="_blank"><img src="https://i.imgur.com/zulajRd.gif"></a>
+　<a href="http://beru.hippy.jp/" target="_blank"><img src="https://i.imgur.com/gLxOf8q.gif"></a>
 
-<img src="https://i.imgur.com/9jcAUVv.gif">　<img src="https://i.imgur.com/Szmjm6A.gif">　<img src="https://i.imgur.com/hUQytvV.gif">　<br><br><img src="https://i.imgur.com/NrB9UB9.gif">　<img src="https://i.imgur.com/zulajRd.gif">　<img src="https://i.imgur.com/gLxOf8q.gif">　<br><br><img src="https://i.imgur.com/kft2rpL.gif">　<img src="https://i.imgur.com/0Y4xXQR.gif">　<img src="https://i.imgur.com/R9En3MI.gif">　<br><br><img src="https://i.imgur.com/65XWh6x.gif">　<img src="https://i.imgur.com/jokl3rn.gif">　<img src="https://i.imgur.com/ouVX1va.gif">　<br><br><img src="https://i.imgur.com/zwZtYVy.gif">　<img src="https://i.imgur.com/zR8VqMT.png">　<img src="https://i.imgur.com/6gsVjjE.gif">　<br><br><img src="https://i.imgur.com/8jgus9J.gif">　<img src="https://i.imgur.com/eMOOTfI.gif">　<img src="https://i.imgur.com/nfmJCMB.gif">　<br><br><img src="https://i.imgur.com/9EvtDb7.gif">　<img src="https://i.imgur.com/CJHMori.gif">　<img src="https://i.imgur.com/ftzJEFC.gif">
+　<br><br><a href="https://web.archive.org/web/20130710021102/http://cherish.silk.to:80/" target="_blank"><img src="https://i.imgur.com/kft2rpL.gif"></a>
+　<a href="http://chokomai.com/" target="_blank"><img src="https://i.imgur.com/0Y4xXQR.gif"></a>
+　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/R9En3MI.gif"></a>
 
+　<br><br><a href="https://web.archive.org/web/20110728110156/http://chu.itigo.jp/" target="_blank"><img src="https://i.imgur.com/65XWh6x.gif"></a>
+　<a href="http://sorahana.ciao.jp/" target="_blank"><img src="https://i.imgur.com/jokl3rn.gif"></a>
+　<a href="http://chokomai.com/" target="_blank"><img src="https://i.imgur.com/ouVX1va.gif"></a>
 
+　<br><br><a href="http://milky.geocities.jp/nyarose00/" target="_blank"><img src="https://i.imgur.com/zwZtYVy.gif"></a>
+　<a href="http://lame.xii.jp/lame/" target="_blank"><img src="https://i.imgur.com/zR8VqMT.png"></a>
+　<a href="https://web.archive.org/web/20100418035935/http://drikoti.net:80/" target="_blank"><img src="https://i.imgur.com/6gsVjjE.gif"></a>
+
+　<br><br><a href="https://web.archive.org/web/20111101151554/http://www.mirukuma.com/" target="_blank"><img src="https://i.imgur.com/8jgus9J.gif"></a>
+　　<a href="http://engrampixel.co.vu/" target="_blank"><img src="https://i.imgur.com/eMOOTfI.gif"></a>
+　　<a href="https://web.archive.org/web/20110820151708/http://casinhadasgifs.zip.net/" target="_blank"><img src="https://i.imgur.com/nfmJCMB.gif"></a>
+
+　<br><br><a href="https://web.archive.org/web/20110728061529/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/9EvtDb7.gif"></a>
+　<a href="http://nyokiope.com/" target="_blank"><img src="https://i.imgur.com/CJHMori.gif"></a>
+　<a href="https://web.archive.org/web/20121105152819/http://www.petitsweets.org/" target="_blank"><img src="https://i.imgur.com/ftzJEFC.gif"></a>
+
+　<br><br><a href="http://frank-web.net/sozai/" target="_blank"><img src="https://i.imgur.com/RSzIZtu.gif"></a>
+　<a href="https://web.archive.org/web/20100923153817/http://sao-charin.babymilk.jp:80/charin/mainpage.html" target="_blank"><img src="https://i.imgur.com/AJOC34r.gif"></a>
+　<a href="https://web.archive.org/web/20100828110122/http://fm-fragment.girly.jp:80/" target="_blank"><img src="https://i.imgur.com/hwEyio3.gif"></a>
+
+　<br><br><a href="http://ichigoaporo.jp/" target="_blank"><img src="https://i.imgur.com/3OsWP3e.gif"></a>
+　<a href="https://web.archive.org/web/20100823031436/http://engel.websozai.jp:80/" target="_blank"><img src="https://i.imgur.com/jNtEpEd.gif"></a>
+　<a href="https://web.archive.org/web/20110925164148/http://www.f6.dion.ne.jp:80/~kirako7/" target="_blank"><img src="https://i.imgur.com/Rk6dEkh.gif"></a>
 
 </center>
+
+</div>
+
 <br><br><br>
 <font color="#ADA49C"><center><img src="https://i.imgur.com/sBg6LRN.gif"> how to have your site / blog here <img src="https://i.imgur.com/sBg6LRN.gif"></center><br><br></font><font color="#C7BCA7">
 　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　it should be similar in subject and aesthetics ;<br>
