--- a/recommended.html
+++ b/recommended.html
@@ -395,8 +395,9 @@ position: relative;
 　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　it should be similar in subject and aesthetics ;<br>
 　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　send me your button, it should be 88 x 31 px ;<br>
 　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　your site should be sfw ( light nudity allowed ) ;<br>
-　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　i give preference to sites that are classified as<br>　　　　　　　　　　　　　safe ( https ) and have their own domain !
-<br><br><br><br></font>
+　　　　<img src="https://i.imgur.com/q8OM9PU.gif">　i give preference to sites that have their own domain !
+<br><br>
+　<b>( i also keep here some precious sites from the web.archive )</b><br><br><br></font>
 <center><img height="auto" width="200px" src="https://i.imgur.com/wuxor4Q.gif"></center>
 </div>
 <br><br>
