--- a/recommended.html
+++ b/recommended.html
@@ -359,12 +359,12 @@ position: relative;
 　<a href="http://beru.hippy.jp/" target="_blank"><img src="https://i.imgur.com/gLxOf8q.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20130710021102/http://cherish.silk.to:80/" target="_blank"><img src="https://i.imgur.com/kft2rpL.gif"></a>
-　<a href="http://chokomai.com/" target="_blank"><img src="https://i.imgur.com/0Y4xXQR.gif"></a>
+　<a href="https://web.archive.org/web/20080501195432/http://sugarpink.girly.jp/pink.html" target="_blank"><img src="https://i.imgur.com/0Y4xXQR.gif"></a>
 　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/R9En3MI.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20110728110156/http://chu.itigo.jp/" target="_blank"><img src="https://i.imgur.com/65XWh6x.gif"></a>
 　<a href="http://sorahana.ciao.jp/" target="_blank"><img src="https://i.imgur.com/jokl3rn.gif"></a>
-　<a href="http://chokomai.com/" target="_blank"><img src="https://i.imgur.com/ouVX1va.gif"></a>
+　<a href="https://web.archive.org/web/20080501195432/http://sugarpink.girly.jp/pink.html" target="_blank"><img src="https://i.imgur.com/ouVX1va.gif"></a>
 
 　<br><br><a href="http://milky.geocities.jp/nyarose00/" target="_blank"><img src="https://i.imgur.com/zwZtYVy.gif"></a>
 　<a href="http://lame.xii.jp/lame/" target="_blank"><img src="https://i.imgur.com/zR8VqMT.png"></a>
