--- a/recommended.html
+++ b/recommended.html
@@ -378,7 +378,7 @@ position: relative;
 　<a href="http://nyokiope.com/" target="_blank"><img src="https://i.imgur.com/CJHMori.gif"></a>
 　<a href="https://web.archive.org/web/20121105152819/http://www.petitsweets.org/" target="_blank"><img src="https://i.imgur.com/ftzJEFC.gif"></a>
 
-　<br><br><a href="http://frank-web.net/sozai/" target="_blank"><img src="https://i.imgur.com/RSzIZtu.gif"></a>
+　<br><br><a href="https://web.archive.org/web/20101120155824/http://cuty-make.info/framepage.html" target="_blank"><img src="https://i.imgur.com/RSzIZtu.gif"></a>
 　<a href="https://web.archive.org/web/20100923153817/http://sao-charin.babymilk.jp:80/charin/mainpage.html" target="_blank"><img src="https://i.imgur.com/AJOC34r.gif"></a>
 　<a href="https://web.archive.org/web/20100828110122/http://fm-fragment.girly.jp:80/" target="_blank"><img src="https://i.imgur.com/hwEyio3.gif"></a>
 
