--- a/portfolio.html
+++ b/portfolio.html
@@ -390,7 +390,8 @@ position: relative;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/4mpPzWm.jpg"><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/q4TUzAP.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/i63xCU2.jpg">
+<img width="200px" height="auto" src="https://i.imgur.com/3alMoVm.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/y5oSwE1.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
