--- a/faq.html
+++ b/faq.html
@@ -355,6 +355,19 @@ position: relative;
 <br><br><br><br>
 <br>
 
+<sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　please, read this first :</font><br><br><br>
+<font color="#B1A69E">
+there is something that i would like to specify here, although it is something always implied, i think it would be better just to be clear !!!<br>
+i personally don't like to use "names", "communities", or any form of group identification to represent my individual beliefs, opinions, and valuations ; therefore, you will never see me participating in specific communities or movements. i <b>never</b> use names of movements or groups to identify me or to represent my ideas and opinions. that doesn't mean that i don't support any of it, the thing is that i don't feel that they represent me properly.<br>
+it's part of what i long to : to think alone about things and formulate my own opinions according to what i individually believe. this is something i truly always support and encourage, but i understand that it is simpler to use groups when you are searching for the right path in life, i have also done this for some time !<br>
+so, if you really have an interest in knowing what i think about things, please take your time to read my texts.<br>
+i know it can be tiring, but i really think it's important to write clearly what i think instead of throwing random information here and there and calling myself things that i don't really consider myself ///<br>
+you're always free to question me about things and point out when i have some behavior that doesn't match what i believe, after all, i really want to improve and that would really help me !<br>
+but please don't question me about supporting or not movements and communities, because i am not part of any of this. i just support what i say i support, it's that simple.<br>
+<br><br><br><br><br><br>
+</font>
+
+
 <a name="tumblr" id="tumblr"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　what is my "about" on tumblr ?</font><br><br><br>
 <font color="#d8b9af">　( august . 31 . 2017 + january . 04 . 2018 )</font>
