--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,97 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/tpBWv2N.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>september . 06 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/CjTYdnd.gif"/><br>
+aaa ♡ i have good news, and some updates !!<br>
+i got a new camera, i'm so excited, i already took some beautiful pictures <img src="https://i.imgur.com/j2HpytF.gif"/><br>
+i used to take pictures with my old phone or my mom's camera, which is good, but it was not always possible, so it kept me from taking pictures of some specific things like some of my crafts and.. well, myself.<br>
+because of that, my pictures were usually inconsistent quality and it bothered me a lot ; ;<br>
+i felt insecure and confused about posting my pics so many were randomly posted on my tumblr or facebook pages ///<br>
+so now, i decided to organize my folders and just kept the beautiful, good quality pics. i deleted a lot of old stuff and even updated the look book page, the "about" pic and the portfolio.<br>
+i decided to just make one session for my pictures in the look book and make them temporary ( i usually get tired of looking at old photos at some point so i know they will be deleted sometime ).<br>
+this session will be for pictures of myself in general, because i don't really take pics of my looks or my face often, but more "specific" pics. i never knew where to post these here, so now i have a place.<br>
+some old pics will be reposted from time to time, so i will not specify dates !<br>
+i still don't think i'll post selfies often anyway, and i'll keep taking pictures with pajamas and nightgowns, because as i've said before, it's how i usually feel comfortable. also, i probably will not stop posting some pics anonymously out there.. i'm very shy, sorry ///<br>
+i still have lots of updates to do about it + i'll post my crafts more often, so stay tuned ♡ !<br>
+<br>
+as you may have noticed, i also made some changes to my inactive accounts.<br>
+i deleted my already inactive 8tracks acc, i had not deleted until today because i used to listen to some playlists there, but the site changes completely prevented me from doing this and i was annoyed.. there was no reason to continue there, since i couldn't even listen to my own playlists... <img src="https://i.imgur.com/Fx1iziF.gif"/><br>
+i also updated some images and erased some unnecessary posts in my facebook profile. i still keep it to keep in touch with some people over there + manage the pages.<br>
+about the instagram account i decided to clean it completely and change everything, including the name. i did this because looking at the the old pictures were making me uncomfortable, they were not very good. also, i was getting many messages from confused people with my absence. i'll keep the acc because i want to keep in touch with some people, besides i always see very beautiful content there !<br>
+i hope these changes haven't been uncomfortable for anyone, i just like to keep things organized ///<br>
+<br>
+now, i have a ( kinda old ) sketch that i painted recently :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/7Dv7HG3.png"/></center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+her name is lilla and she smells like lavender.<br>
+cliché ? perhaps... <img src="https://i.imgur.com/wSTB6jv.gif"/><br>
+<br>
+and more lilac stuff come by, i recently did a papercraft of a very cute pkmn ( not a pink one !! )<br>
+chillarmy ♡<br>
+<br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/soM5ku8.png"/></center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+do you like when i post papercrafts here ?<br>
+i plan to post more crafts in future posts.<br>
+<br>
+so today what's going to be double !<br>
+the first text is about something i felt the need to talk about but that is not reeeally a subject : about my arguments in my texts in general.<br>
+then i also wrote about a second subject : immigration. this topic seems to be "feared" by some people nowadays, but i think it's relevant to talk about it because it's in some way a reality in my life and will also include information about my future plans that you were curious about, so let's just get into it <img src="https://i.imgur.com/j9db2cK.gif"/><br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+　ⅰ.<br>
+people who read my huge texts here may notice that my arguments for all subjects have some patterns, i might say, characteristic of me.<br>
+i always explain my reasonings to the conclusions, opinions, and "solutions to problems" that i arrive at ; but this doesn't seem to be clear enough to explain why i always think in a specific way and come up with texts that are so deep, sentimental and at the same time logical.<br>
+the thing is exactly that ! i take into consideration all the parts that make up who i am. i am a human being who has rationality to be able to reflect on things and observe situations with an "impartial", rational and logical perception ; but i also have feelings, which are what guide me to questioning things and wanting to be happy, helping me and helping those i love, by getting answers to problems. despite having the sentimental side clearly stronger than the rational one, i strive to balance both when thinking about things and also to write my texts, so that i can get more consistent and useful answers. i don't always get it right because i have hormones that affect my cognitive ability from time to time, i'm an animal ( female, which makes me on the other hand get particular facility in other things, which i also try to make the most of ) but i only write my texts when i am in the mood to reach balanced conclusions.<br>
+i think what makes the difference in my arguments to most people is that although i know that i am not the most mature and experienced person, not having much knowledge in specific areas, i always look for answers within myself and in the nature, which is what inevitably controls us. we are all composed of mind, body and soul ; our mind carry the ability to rationalize, our body carry feelings and instincts, our soul carry our pure essence. people usually focus on the part they are most comfortable using and form arguments based on that particular part, but that causes problems ; ;<br>
+if you just focus on the mind you will make arguments that are insensitive, extreme and that will not bring happiness ; if you focus on the feelings you will make arguments that will not be useful, perhaps childish and very melancholy ; if you focus on the instincts you will make primitive and inconsistent arguments ; if you focus on the soul you will make arguments that are usually religious and too abstract to be understood. what i strive to do is to use the feelings ( which are my strength ) to guide me through the questions, then use all the other parts to form my arguments and respond to the problems consistently and clearly. my arguments are gentle and soft, natural, extremely sincere and even without having great academic background it's not just "all over the place". it's always thought to bring me happy and working responses, even though we are animals and nature is neutral, we can understand and work with it if we use all the parts that make us up properly.<br>
+i know that my texts are focused on being personal and may not work for many people because they have opinions of their own, and i always encourage you to reflect personally to find your own answers. anyway, i think my way to get to the arguments in a balanced way is a healthy practice and i recommend it to everyone ♡ !<br>
+i'm utterly happy to know that you like to read what i write, since it's something that comes from my heart ( and everything else ).<br>
+<br>
+<br>
+　ⅱ.<br>
+this is a complex subject and currently controversial so i'll start by explaining my point of view before talking about my personal experience :<br>
+animals evolve over time to adapt to the places where they live, animals have always immigrated ( intentionally or unintentionally ) to the entire planet and this gives us the variety of species breeds we see today. with humans it was not different, our different races and physical types exist because we are animals that had to adapt evolving in the past, when this was very necessary ; not that it's no longer necessary since we continue in this process, but our small physical differences don't affect us in a very relevant way nowadays because we have been able to adapt our homes, clothes, food and everything necessary according to the local needs. this allows us to be able to survive anywhere in the world ( the more money, the more quality of life, if you choose a "difficult" place for you ).<br>
+because of this, i completely support immigration, even though humans ( like all other animals ) have a "proper" place in the world according to their races and physical type, we don't need to follow these adaptations as long as we have the technology needed for our quality of life. i support that people can live wherever they want, out of necessity or for fun, we are all free to come and go on planet earth since we can have comfort through our efforts as a rational species ( for this reason, there are also no problems in being mixed nowadays ).<br>
+my family and my descendants are made up of people from europe who came to brazil at a time when living there was very bad, while here was a wonderful and very comfortable place. it was the best choice for them at the time, and i don't think they did anything wrong because my family lived very well in the old days because of it. but a common problem especially in this type of drastic immigration ( from a completely different place to another ) is that future generations will find themselves in an increasingly worse situation of adaptation. my family doesn't have very good financial situation these days, and as i said earlier, if the place on earth is difficult for you to adapt, it takes more money to supply your needs.<br>
+currently, living in brazil is not good for me or my family, we are not comfortable in many ways. our food is good but the weather is really a nuisance for me, although i absolutely loving the blue sky and the birds that live on my roof and sing every morning all year long, loving my mother tongue, loving many local foods and fruits ( that i'll take with me wherever i live ); the summers are getting more and more uncomfortable. but this is the "small" personal reason why i want to go back to europe ; i really want to form a family and the violence in my country is really something frighteningly common, besides the fact that the country is also not economically well. these are many problems that used to exist when my great great grandparents suffered when they decided to live in brazil. i want to go back to europe to give my children a good life and to be happier ♡ !<br>
+fortunately, i can do that, and obviously i support that kind of attitude and i think immigration is great in many ways. they can cause problems for future generations, as it did for me, but this can be solved with more immigration and it is not something that has "ruined" my family or something, as some people often imagine ( ??? )<br>
+i like brazil as well as i like anywhere else in the world, it is a beautiful and special place and i have obviously a special affection for this place has been where i was born and lived until today, but europe is where i want to live now and i think it's a good choice for being my "home" location, biologically speaking.<br>
+besides, i would like to comment on other "immigration" details that relate to humans... i don't support raising animals or plants in very different places from their natural habitat unless it's done in a comfortable environment under carefully adaptation, and obviously without overloading the environment ( large-scale agriculture or animal breeding that are not locally appropriate affect the environment and are harmful to literally everyone, i utterly disapprove of these practices ).<br>
+<br>
+well, that's it, i hope i've expressed myself clearly !!<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/OYsjUtj.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/tpBWv2N.png"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/4DUjsh7.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
