--- a/look-book.html
+++ b/look-book.html
@@ -378,6 +378,11 @@ p { margin: 0; }
 <center>
 
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.08.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/DxXQre8.png"/><br>
+<br>
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 09.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/ruYaJgs.png"/><br>
 <br>
@@ -429,13 +434,6 @@ p { margin: 0; }
 <font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 03.29.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/fH7jWq4.png"/><br>
 <br>
-
-
-<br><br><br>
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 03.09.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/v3Af4hP.png"/><br>
-<br>
-
 
 
 
