--- a/gaming.html
+++ b/gaming.html
@@ -1200,10 +1200,10 @@ i'm working hard to get all the characters, places & decos. i'll update here acc
 </div>
 <br><br><center>
 <img width="300" height="auto" src="https://i.imgur.com/WMuSzeT.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/M6ex1Vu.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/uzZKyZP.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/7yvTls1.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/uOw8ZFq.png"/>
+<img width="300" height="auto" src="https://i.imgur.com/HiMvYPi.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/x5Gopb6.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/QzYQXEy.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/q6tptC1.png"/>
 
 <br><br></center>
 </div>
@@ -1333,6 +1333,9 @@ mobile games i recommend
 well, i like to test random mobile games and sometimes i find very nice stuff ! these are for android, but i think you can find some of them on ios too.
 </div>
 <br><br><center>
+<img width="170" height="auto" src="https://i.imgur.com/oMnbWZZ.png"/><br><br>
+<img width="170" height="auto" src="https://i.imgur.com/5eldZv6.png"/> <img width="170" height="auto" src="https://i.imgur.com/r0HNSYX.png"/><br><br>
+<img width="170" height="auto" src="https://i.imgur.com/eA8664B.png"/> <img width="170" height="auto" src="https://i.imgur.com/YCYQdsN.png"/><br><br>
 <img width="170" height="auto" src="https://i.imgur.com/3zzNy62.png"/> <img width="170" height="auto" src="https://i.imgur.com/MH7P7qf.png"/><br><br>
 <img width="170" height="auto" src="https://i.imgur.com/QY8GRGo.png"/> <img width="170" height="auto" src="https://i.imgur.com/MPrPPlb.png"/><br><br>
 <img width="170" height="auto" src="https://i.imgur.com/xhoAi2u.png"/> <img width="170" height="auto" src="https://i.imgur.com/XRsbim9.png"/><br><br>
