--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@ position: relative;
 <br><br><center><div id="update" style="background-image:url(https://i.imgur.com/HgFke6Y.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 100px; text-align: justify; font-family: Verdana; font-size:7px; line-height: 100%">
 <center><img src="https://i.imgur.com/bwAaPW7.gif"></center>
 <br><br>
+　11/09 <img src="https://i.imgur.com/y9S1bJ8.gif"> edit on: <font color="#DFB7B7">faq</font><br>
 　11/08 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 　11/08 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
 　11/08 <img src="https://i.imgur.com/y9S1bJ8.gif"> look idea on: <font color="#DFB7B7">look book</font><br>
@@ -351,7 +352,6 @@ position: relative;
 　11/05 <img src="https://i.imgur.com/y9S1bJ8.gif"> info on: <font color="#DFB7B7">faq</font><br>
 　11/04 <img src="https://i.imgur.com/y9S1bJ8.gif"> stuff on: <font color="#DFB7B7">portfolio</font><br>
 　11/03 <img src="https://i.imgur.com/y9S1bJ8.gif"> html stuff on: <font color="#DFB7B7">links page</font><br>
-　11/02 <img src="https://i.imgur.com/y9S1bJ8.gif"> sites on: <font color="#DFB7B7">recommended</font><br>
 </div></center>
 
 <br>
