--- a/faq.html
+++ b/faq.html
@@ -1566,7 +1566,7 @@ remember : the kinder you are, the more beautiful you become ( and that includes
 
 <a name="immigration" id="immigration"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　why do i want to immigrate ?</font><br><br><br>
-<font color="#d8b9af">　( september . 06 . 2018 )</font>
+<font color="#d8b9af">　( september . 06 . 2018 + november . 09 . 2018 )</font>
 <br><br>
 <font color="#B1A69E">
 this is a complex subject and currently controversial so i'll start by explaining my point of view before talking about my personal experience :<br>
