--- a/links.html
+++ b/links.html
@@ -347,6 +347,8 @@ position: relative;
 <sub><img src="https://i.imgur.com/3LZD5fp.gif"></sub><font color="#c1a98b">
  html stuff :</font><br><br>
 <div style="width: 97px; height: 50px; overflow-x:hidden;">
+<a id="ooo" title="my first layout ever" href="https://kawaii.info.gf" target="_blank" >kawaii.info.gf</a>
+<br>
 <a id="ooo" title="???" href="https://soft.root.sx" target="_blank" >soft.root.sx</a>
 <br>
 <a id="ooo" title="stuffie collection" href="https://bear.shop.tm" target="_blank" >bear.shop.tm</a>
