--- a/look-book.html
+++ b/look-book.html
@@ -378,6 +378,11 @@ p { margin: 0; }
 <center>
 
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.11.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/wXpMQjF.png"/><br>
+<br>
+
+<br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.08.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/DxXQre8.png"/><br>
 <br>
@@ -427,12 +432,6 @@ p { margin: 0; }
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/OGp5npr.png"/><br>
-<br>
-
-
-<br><br><br>
-<font color="#5D4F4F"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 03.29.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/fH7jWq4.png"/><br>
 <br>
 
 
@@ -524,6 +523,14 @@ p { margin: 0; }
 
 <br><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/r2xqpHV.png"/><br><br>
+<br>
+
+<br><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/Q1aekpJ.jpg"/><br><br>
+<br>
+
+<br><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/ZfC1w51.jpg"/><br><br>
 <br>
 
 
