--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,114 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/uVjxZcw.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 18 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/ZhgJgb8.gif"/><br>
+i'm so excited ♡ !!!<br>
+i'm finally ready to start my online store, shy bunny <img src="https://i.imgur.com/FYD71ij.gif"/><br>
+i took pictures of all the items and i will post them in the next days !<br>
+i'm going to do disclosure on my main fb page, which has similar aesthetics, and i also plan to make a giveaway.<br>
+unfortunately, for now, this store only works for brazil, but i can deliver small items to other places if anyone has an interest. just contact me ♡<br>
+i'm organizing everything the best i can <img src="https://i.imgur.com/Dy3FvOr.gif"/><br>
+<br>
+so.. there are lots of political issues going on because of the elections here ; ;<br>
+very stressful <img src="https://i.imgur.com/b44NCpX.gif"/><br>
+i would like to make it clear that i don't like to give opinions on politics, economics or any subjects that i don't have proper knowledge to write about.<br>
+i know it is important, but i don't feel comfortable posting opinions on subjects that i have not studied properly, i hope you understand !!<br>
+( i'll add this to the faq )<br>
+<br>
+going back to the fun subject, i plan to post lots of cute crafts from now on !!<br>
+i'm very happy about this, since it is something as important to me as my digital works.<br>
+lately i've been pretty excited about trying different aesthetics for decoration, i'm always saving new material and i get inspired easily !<br>
+i always have real strong tendencies for decorating everything with my main aesthetic ( because it always warms my heart right away ), but i believe my secondary aesthetics also represent important parts of who i am. <img src="https://i.imgur.com/vVXYiJQ.gif"/><br>
+i think they deserve some love too ♡<br>
+i'm having lots of fun trying new color combinations, different textures... i feel that i'm improving a lot.<br>
+today i'm going to show you a very nice chubby teddy bear, that will be in the store :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/nWm4BR8.png"/></center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+isn't he adorable ♡ ?<br>
+i just feel like squeezing him and giving him lots of kisses <img src="https://i.imgur.com/1DEhCyG.gif"/><br>
+<br>
+i also have something today that i've been forgetting to do for a long time ( i'm sorry /// )<br>
+i recorded an audio in portuguese, with the story of the "pink little bug", that i wrote !<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/ziq7cd.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">bichinho rosa .mp3</font></a>　
+</center>
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+it's so much more comfortable to record in portuguese, really...<br>
+i think it's a good story for before bed, what do you think ? <img src="https://i.imgur.com/bSzCqHQ.gif"/><br>
+<br>
+i would also like to post here a simple drawing that i painted.<br>
+it's really nothing special, i was just bored, but i think it's cute and nostalgic <img src="https://i.imgur.com/2UJaqr0.gif"/><br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/xihcLIa.png"/></center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+do you also think painting is relaxing ?<br>
+i absolutely love painting ♡<br>
+<br>
+in this post i have an important thing to talk with you, besides the main q&a subject.<br>
+i want to talk about why i gave up using the feedback buttons on my website, as well as the hit counter !<br>
+( yes, a lot of text lately, i hope it's not a problem ; ; )<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+　ⅰഒ<br>
+since i wrote my "honest post" to you i reflected a lot about my attitudes. whenever i write something i do it initially to improve myself. i changed the way i treat my photos, i felt the need to clarify a lot of confusing things for you about personality and behavior that might be useful.. but i still felt very upset about the numbers on that site.<br>
+i decided a few days ago that i want to stop using the feedback buttons as well as the hit counter. i've never really liked the idea of ​​exposed numbers because people always take them too seriously, above the quality of content... they really think that numbers represent something important when in fact it's not realistic or impartial ; ;<br>
+i started using them because i liked to have feedback, but i think it turned out to be something not very relevant at some point... i'm not devaluing your clicks, but i prefer feedbacks with constructive words, tips and opinions, not just one approval or disapproval number. this has not really helped me improve, it's nothing compared to the messages i get. people are not numbers, they are individuals with real and important opinions and feelings. i want real opinions.<br>
+to be honest, i was very happy to see the numbers growing, but i know that they don't represent much of anything other than the site is growing in visits ( which is good, but overvalued ). the numbers are mostly positive, and i feel extremely happy about it, but it's definitely exaggerated. reading true and honest messages from the visitors proved infinitely more enriching for me, even the shorter messages were written by someone who really wanted to give their opinion.<br>
+social media have created this need for big numbers in people and even after partially abandoning social media altogether i have tried to use the feedback button system in my favor here, and it was quite useful at first, but i feel that i don't have more reasons to keep it here than to praise a false reputation for my image on the internet. i'm just a normal person doing my best, just like any other producer on any other website. i reflected a lot on this and people treating me differently because of numbers is not something that i value and i don't think is good for me or the visitors. the race for numbers and fame is not the kind of thing i'd be proud to encourage on my site ( or anywhere else, but unfortunately that's not always an option ).<br>
+i kept the numbers exposed despite not approving their overvaluation because i believed it could bring public ; maybe people could took me more seriously if i had big numbers ? maybe they could allow themselves to look at the site more easily if they saw this "seal of approval" from previous visitors ?<br>
+... but is it really worth blinding people with such superficial information and then saying it's not important ?<br>
+i have come to the conclusion that i must be an example and show that appreciation of numbers is not healthy or productive.<br>
+i felt free from this race for numbers as i moved away from social media, and i discovered over time that frequent visitors of my site are not here either by the numbers, but by the content, just as they are on other interesting sites and blogs of the internet. it definitely warms my heart to know that neatly my work honestly attracts so many people ♡<br>
+so, i removed the feedback buttons from all the pages of the site ( except, of course, from the archives ) and made some changes to the layouts ( because i'm inspired ). i removed the hit counter from the index, although i still know how many ips visits my site, this is more for technical information. i'm going to increase the frequency with which the chat is open, so i decided to keep only one of them, moving the messages and smilies from the look book chat to the main chat, so i can have more control over it. consider these changes as a purification, it's extremely invigorating to be free of ego needs and social fears ~<br>
+i hope hiding the numbers and keeping the written feedback in evidence is more productive for me and for you ! i wish from the bottom of my heart that you participate more avidly in this site, and not in the form of numbers, but as wonderful and real angels, which is what you are to me. ♡<br>
+( remembering that i love exchanging long emails and letters, so be sure to get in touch with me at letters@middlepot.com if you want to talk to me )<br>
+<br>
+<br>
+　ⅱഒ<br>
+this subject is not so questioned but some people are curious to know what religion i have, since i occasionally write things that seem kinda religious..<br>
+basically, i'm a paganist ! i do not consider myself anything more than that. i am a daughter of mother nature ; nature is my god and goddess, it's everything to me. nature guides me in all difficult times and has always helped me to make the right decisions, nature makes me feel at home wherever i am, it is because of her that i'm learning to see beauty in all things and to value the things that really matter and that make me happy. following my role in nature is my dream and guiding others to happiness & comfort is my passion ♡ !<br>
+i often thank nature for everything i am blessed to enjoy in the most unexpected moments. i make prayers to bring good energies to the ones i love. i feel a lot of motherhood in nature and so i usually refer to it in a feminine way, but nature also has paternity depending on the moment so referring in a masculine way can happen. i have always been very attached to nature and mythology has always been a very great interest, i have always believed from the bottom of my heart in magic and in the magical beings who secretly play their role in nature & i utterly love to make offerings for these beings who take care of me and of whom i love. i also greatly appreciate sympathies and rituals that bring good energies and help us connect with nature. i usually do these things from my heart, instinctively, so i'm not part of communities or specific religion within paganism, although reading about these things is something i absolutely love doing.<br>
+i always feel a very strong bond with fairies, angels and rabbits. i believe there are some particularities of my being that are the same as theirs, so i identify a lot even though i am a human. the role of the fairies in nature, the protective wings of the angels, the purity and maternity of the rabbits... these are virtues that i long for ♡ !<br>
+i believe in faith as much as in fate. in my view, both are forces that work in our lives. when fate is absolute and yet your faith goes beyond limits, that's how miracles happen. i believe that the destiny is something that has no relation to us and where is our luck, as long as faith is composed of energies that make up our essence ; so we can also mess up our luck with negative thoughts, it's important to be careful with our feelings.<br>
+i unhesitatingly believe in afterlifes, i don't have a clear vision of what it is, but i believe it is certainly something very fruitful for our soul, full of new opportunities ! i also believe in other types of lives simultaneously happening, in secret from us ( other realities and other worlds, like our dream world ).<br>
+lastly, i would like to comment that i believe that all religions and personal beliefs of each person are important and that if the person is being guided to be better each day, they are certainly following the right path. i accept with all my heart any prayer and good blessings that anyone sends me. i love feeling connected in peace with other people so i love all kinds of expressions of affection, religious or not ♡<br>
+<br>
+i wish you all the joy and solace !!!<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/1hm3SLB.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/uVjxZcw.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/tpBWv2N.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
