--- a/crwel-friends.html
+++ b/crwel-friends.html
@@ -544,56 +544,9 @@ function abrirpop01(){
 </div>
 </center>
 <!--coisinhas-->
+
+
 </center>
-
-<style type="text/css">
-/*estilo da pop-up*/
-#pop0{
-position: fixed;
-top: 20%;
-left: 40%;
-font: 11px;
-margin: -75px 0 0 -150px;
-width: 405px; /*largura do coiso todo*/
-height: 430px; /*altuuuuuuura*/
-padding: 5px;
-border:1px dashed #CEB6B6;
-background: #fffcfc; /*corzinha de fundo*/
-display: none;
-z-index: 999999999999999999999; /*0 "10" faz o banner se sobre-por aos demais*/
-}
-#link-fechar0{
-color: #CEB6B6;
-}
-</style>
-
-<script type="text/javascript">
-function fecharpop0(){
-    document.getElementById('pop0').style.display = 'none';
-}
-function abrirpop0(){
-    document.getElementById('pop0').style.display = 'block';
-    setTimeout ("fecharpop0()", 999999);
-}
-</script>
-
-<div id="pop0">
-<!--coisinhas-->
-<center><div style="background-image:url(); border: 1px; overflow: auto; color: #BC9F9F; width: 405px;height: 430px; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:10px; line-height: 10px">
-
-<div style= "padding-left: 3px;">
-　　　　　　<div style="text-align: right;"><a href="javascript: fecharpop0();" ><font color="#CEB6B6" size="1"> [ x ]</font></a>　</div>
-<br>
-<center><img src="https://i.imgur.com/GJHwH9N.png"></center>
-</div>
-</div>
-</div>
-</center>
-<!--coisinhas-->
-</center>
-
-
-
 <center>
 <style type="text/css">
 /*estilo da pop-up*/
@@ -643,7 +596,7 @@ function abrirpop1(){
 
 
 
-　　　　<a href="javascript: abrirpop01();"><img width="auto" height="70" src="https://i.imgur.com/ZRN030i.png"></a> <a href="javascript: abrirpop0();"><img width="70" height="70" src="https://i.imgur.com/GJHwH9N.png"></a> <a href="javascript: abrirpop1();"><img width="70" height="70" src="https://i.imgur.com/Y0emjrX.png"></a>
+　　　　<a href="javascript: abrirpop01();"><img width="auto" height="70" src="https://i.imgur.com/ZRN030i.png"></a> <a href="javascript: abrirpop1();"><img width="70" height="70" src="https://i.imgur.com/Y0emjrX.png"></a>
 
 
 
