--- a/not-bad.html
+++ b/not-bad.html
@@ -338,7 +338,7 @@ position: relative;
 <div id="stuff">
 
 <audio id="musict" preload="true">
-  <source src="https://files.catbox.moe/dn2ook.mp3" type="audio/mpeg">
+  <source src="https://files.catbox.moe/r1d3ho.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
  <button id="pButton" class="play"></button>
