--- a/credits.html
+++ b/credits.html
@@ -455,7 +455,7 @@ moveupvar=setTimeout("moveup()",20)
 
 <font family = "Verdana"><font color="#AD9F97"><font size="2">// not bad</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font size="1">　　　90% of the pictures are not mine, credits goes to the related creators ;</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font size="1">　　　<i>music :</i> cry baby instrumental * melanie martinez</font></font></font><br><br>
+<font family = "Verdana"><font color="#C6B5AA"><font size="1">　　　<i>music :</i> serena * ulu</font></font></font><br><br>
 
 <font family = "Verdana"><font color="#AD9F97"><font size="2">// puporipot</font></font></font><br>
 <font family = "Verdana"><font color="#C6B5AA"><font size="1">　　　<i>music :</i> light package * mine</font></font></font><br><br>
